# udacity_capstone

./: .gitignore  README.md  pyproject.toml
data/meta/: dias_values.xlsx
report/: project_report.md
src/: Arvato Project Workbook.ipynb:Zone.Identifier  analysis.ipynb  customer_prediction.ipynb  customer_segmentation.ipynb  data_exploration.ipynb  feature_config.json  files_io.py  preprocessing.py
