[tool.poetry]
name = "udacity_capstone"
version = "1.0"
description = "capstone project for udacity data science nanodegree"
authors = ["Patrick Christoph"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
xgboost = "^3.0.0"
optuna = "^4.3.0"
lightgbm = "^4.6.0"
imblearn = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"